Change log for gfsm

v0.0.10 Mon, 07 Jan 2008 12:52:04 +0100
   + moved gfsmArcList to a native linked-list type, rather than GSList
     - saves 1 pointer per arc
     - adapted some code from glib/gslist.c (sort, remove_link, etc)
   + moved autoheader config file to gfsmAutoConfig.h
     - added header-safe gfsmConfig.h hack to "safely" read in autoheader config
     - requires clobbering any existing autoheader type macros with gfsmNoConfig.h
       ~ there are better ways of doing this (e.g. sed), but this should suffice for most purposes
   + altered behavior of gfsm_automaton_copy_shallow(), gfsm_automaton_shadow()
     - root state id is no longer copied: not considered 'shallow' data
   + moved most simple accessor function code from macros to 'static inline' defined in *.hi
     - added configure option '--disable-inline' to disable function inlining

v0.0.9 Fri, 23 Nov 2007 22:43:52 +0100
   + added "source" field to gfsmArc: source gfsmStateId
     - fixed gfsm_automaton_reverse() and gfsmReverseArcIndex to use new feature
     - added additional argument to various methods in gfsmArc.h to deal with new datum
   + added shell tool gfsmindex, source files gfsmIndexed.[ch], gfsmIndexedIO.[ch]
     - the "right way" to do this would be to go for a truly abstract automaton API,
       but the price (virtualization, extraneous flag & limit checking, etc.) is daunting
   + changed static int<->pointer casts to GPOINTER_TO_(U)INT, G(U)INT_TO_POINTER
   + fixed gfsmWeight-related segfault bugs on 64-bit linux
     - gfsm_weight2ptr() and gfsm_ptr2weight() are now implemented as true functions
       using a "hidden" union type gfsmWeightOrPointer to handle memory stuff
     - this happily also allows gcc to compile without -fno-strict-aliasing
   + fixed bug reported by Alexis Nasr in gfsm_pointer_alphabet_new() macro 
   + fixed nasty bug in gfsm_alphabet_load_handle() and gfsmio_getc() causing
     char decimal 255 to return as EOF